--- a/pom.xml
+++ b/pom.xml
@@ -6,14 +6,25 @@
 
     <groupId>io.tozon</groupId>
     <artifactId>rest-util</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0</version>
 
-    <contributors>
-        <contributor>
+    <developers>
+        <developer>
+            <id>katusiimeconrad</id>
             <name>Katusiime Conrad</name>
             <url>https://github.com/katusiimeconrad</url>
-        </contributor>
-    </contributors>
+        </developer>
+    </developers>
+
+    <url>https://github.com/tozon-inc/rest-util</url>
+
+    <distributionManagement>
+        <repository>
+            <id>github</id>
+            <name>GitHub Packages</name>
+            <url>https://maven.pkg.github.com/tozon-inc/rest-util</url>
+        </repository>
+    </distributionManagement>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
